[package]
name = "silicon-bridge"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "SNN-to-FPGA deployment pipeline: Q8.8 fixed-point parameter export, .mem file generation, UART spike readback, and Vivado timing report parsing for neuromorphic hardware"
repository = "https://github.com/Limen-Neural/silicon-bridge"
keywords = ["snn", "fpga", "neuromorphic", "silicon", "q8-8"]
categories = ["science", "hardware-support", "algorithms"]
exclude = ["docs/"]

[lib]
name = "silicon_bridge"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
serialport = { version = "4.3", optional = true }

[features]
default = []
uart = ["serialport"]

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
